# exchange-rate-synchronizer

./: .gitignore  README.md  api.py  controllers.py  create_update.py  crud.py  database.py  main.py  models.py  parser.py  parsers.py  pyproject.toml  requirements.txt  schemas.py  services.py  task.md
app/: api.py  database.py  main.py  models.py  parsers.py  schemas.py
app/controllers/: __init__.py  base_controller.py  country_controller.py  crud_controller.py  currency_controller.py  plot_controller.py
app/templates/: country_currencies.html  currency_changes.html  currency_rates.html  index.html
controllers/: __init__.py  base_controller.py  country_controller.py  crud_controller.py  currency_controller.py  plot_controller.py
old_tmp/: crud.py
templates/: currency_changes.html
