[tool.poetry]
name = "exchange-rate-viewer"
version = "0.1.0"
description = ""
authors = ["kudr.max <mdkudryashov@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
SQLAlchemy = "^2.0.30"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
